# wgpu_paint

./: Cargo.toml  README.md  build_web.sh  index.html
src/: app.rs  compute.wgsl  lib.rs  main.rs  shader.rs  shader.wgsl  state.rs
